--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
           name: Running tests
           command: |
             . venv/bin/activate
-            python3 tests/
+            python3 tests.py
       - store_artifacts:
-          path: test-reports/*.py
+          path: test-reports/
           destination: python_app
