--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,26 @@
 version: 2.1
+
 jobs:
   build:
     docker:
-      - image: cimg/python:3.9.6
+      - image: python:3.8
+
     steps:
+      - checkout
+
       - run:
-          name: Running tests
+          name: Install dependencies
           command: |
-            . venv/bin/activate
-            python3 tests.py
-      - store_artifacts:
-          path: test-reports/
-          destination: python_app
+            pip install poetry
+            poetry install
+
+      - run:
+          name: Run tests
+          command: |
+            poetry run pytest
+
+workflows:
+  version: 2
+  test:
+    jobs:
+      - build
