--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           name: Run tests
           command: |
             python -c "import sys; sys.path.append('/root/project')"
-            poetry run pytest
+            python -m pytest
 
 workflows:
   version: 2
