--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,8 @@ jobs:
       - run:
           name: Run tests
           command: |
-            pip install pytest
             python -c "import sys; sys.path.append('/root/project')"
-            python -m pytest
+            python -m poetry run pytest
 
 workflows:
   version: 2
