--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
 
       - run:
           name: Install dependencies
+          uses: actions/checkout@v1
           command: |
             pip install poetry
             poetry install
