--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -14,11 +14,11 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@master
       with:
-        python-version: 3.7
+        python-version: 3.9
     - name: Generate Report
       run: |
         pip install coverage
-        coverage run -m pytest
+        coverage run -m pytest --cov
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v3
       env:
