--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,4 @@ pytest-cov = "^4.0.0"
 pytest-mock = "^3.10.0"
 
 [tool.poetry.scripts]
-rappi-dfmejial = "main:main"
+rappi-dfmejial = "app.main:main"
