--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "app_rappi_dfmejial"
-version = "0.0.2"
+version = "0.0.3"
 description = "Rappi Titanic challenge"
 authors = ["Daniel Mejia <dfmejial@unal.edu.co>"]
 classifiers = [
@@ -22,4 +22,4 @@ pytest-cov = "^4.0.0"
 pytest-mock = "^3.10.0"
 
 [tool.poetry.scripts]
-rappi-dfmejial = "app.main:main"
+rappi-dfmejial = "app_rappi_dfmejial.main:main"
