--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [tool.poetry]
 name = "app_rappi_dfmejial"
-version = "0.0.2"
+version = "0.0.4"
 description = "Rappi Titanic challenge"
 authors = ["Daniel Mejia <dfmejial@unal.edu.co>"]
 classifiers = [
     "Programming Language :: Python :: 3.9"
 ]
+include = ['data/train.csv']
 
 [tool.poetry.dependencies]
-python = "^3.9.0"
+python = "3.9.0"
 
 numpy = "^1.18.5"
 joblib = "^1.1.0"
@@ -22,4 +23,4 @@ pytest-cov = "^4.0.0"
 pytest-mock = "^3.10.0"
 
 [tool.poetry.scripts]
-rappi-dfmejial = "app.main:main"
+rappi-dfmejial = "app_rappi_dfmejial.main:main"
